<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Verify">

    <TextView
        android:id="@+id/textView_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25sp"
        android:text="@string/title_Verify"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="25sp"
        android:paddingLeft="25sp"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_verify"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="Pitak"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/code_phone_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/code_Verify"
            android:inputType="number"
            android:maxLength="9"
            android:textColor="@color/purple_500"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="TextFields" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25sp"
        android:paddingEnd="25sp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="2sp"
            android:layout_marginTop="25sp"
            android:background="#CCCCCC"
            android:paddingStart="25sp"
            android:paddingEnd="25sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/about_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/aboute_Verify"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <ImageView
        android:id="@+id/click_clean_verify"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="25dp"
        android:src="@drawable/ic_decline"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView_verify" />

    <TextView
        android:id="@+id/reset_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_Verify"
        android:textColor="@color/primary_Blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/click_message_verify"
        app:layout_constraintLeft_toLeftOf="@id/click_message_verify"
        app:layout_constraintRight_toRightOf="@id/click_message_verify"
        android:layout_marginBottom="20sp"/>

    <Button
        android:id="@+id/click_message_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25sp"
        android:background="@drawable/bacrounde_button_alpha"
        android:text="@string/click_Verify"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>